Utworzono za pomocą Colab

--- a/Mushroom_Species_Pytorch_Lightning_CNN.ipynb
+++ b/Mushroom_Species_Pytorch_Lightning_CNN.ipynb
@@ -79,7 +79,7 @@
             "layout": "IPY_MODEL_d20076ce8b654a18b424c20de244d77c",
             "placeholder": "​",
             "style": "IPY_MODEL_a2a55de08cb548db87f0878848930e15",
-            "value": "Epoch 1:  16%"
+            "value": "Epoch 5:  10%"
           }
         },
         "ffc6d11a3ae045beafeb33d5f038ce83": {
@@ -103,7 +103,7 @@
             "min": 0,
             "orientation": "horizontal",
             "style": "IPY_MODEL_3742077f125c4d6cabd452432b008f08",
-            "value": 315
+            "value": 202
           }
         },
         "ff9eba2aa84447eab86b02a41e3f4e2c": {
@@ -124,7 +124,7 @@
             "layout": "IPY_MODEL_e0646bcc48d145b686b2e91382504132",
             "placeholder": "​",
             "style": "IPY_MODEL_ec03db2ac0914a7e8c791469ac413c10",
-            "value": " 315/1935 [05:34&lt;28:39,  0.94it/s, v_num=0]"
+            "value": " 202/1935 [03:27&lt;29:42,  0.97it/s, v_num=0]"
           }
         },
         "16d6b4757f014626b0302e97cc9f1c92": {
@@ -473,11 +473,11 @@
         "print('Data source import complete.')\n"
       ],
       "metadata": {
-        "id": "1m_pc-ZnP3eT",
-        "outputId": "43dab4ef-c61c-4cf5-8ba6-60f3d1812f02",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1m_pc-ZnP3eT",
+        "outputId": "43dab4ef-c61c-4cf5-8ba6-60f3d1812f02"
       },
       "cell_type": "code",
       "outputs": [
@@ -501,11 +501,11 @@
         "!pip install pytorch-lightning"
       ],
       "metadata": {
-        "id": "xZa-1xi8VKRs",
-        "outputId": "d0db5175-a10c-4c58-8e05-65ee0bae0a24",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xZa-1xi8VKRs",
+        "outputId": "d0db5175-a10c-4c58-8e05-65ee0bae0a24"
       },
       "execution_count": 3,
       "outputs": [
@@ -694,11 +694,11 @@
           "shell.execute_reply": "2023-04-25T13:11:28.556446Z"
         },
         "trusted": true,
-        "id": "Vb0yj7QzP3eZ",
-        "outputId": "612b14bf-f0d3-400f-a226-35ec8cb034af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Vb0yj7QzP3eZ",
+        "outputId": "612b14bf-f0d3-400f-a226-35ec8cb034af"
       },
       "execution_count": 6,
       "outputs": [
@@ -849,11 +849,9 @@
           "shell.execute_reply": "2023-04-25T13:12:33.528592Z"
         },
         "trusted": true,
-        "id": "61gWTAUMP3eb",
-        "outputId": "4ae51150-a50e-4cdf-85a6-7769c3f1dd72",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 396,
+          "height": 416,
           "referenced_widgets": [
             "c9b430ba8e664bd9ac33a0ce9b6da43f",
             "fc1d83cab5e94389bdd11fd7f83ad431",
@@ -867,7 +865,9 @@
             "e0646bcc48d145b686b2e91382504132",
             "ec03db2ac0914a7e8c791469ac413c10"
           ]
-        }
+        },
+        "id": "61gWTAUMP3eb",
+        "outputId": "4ae51150-a50e-4cdf-85a6-7769c3f1dd72"
       },
       "execution_count": null,
       "outputs": [
@@ -976,16 +976,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Saving our model and pushing it to hugging face repo\n",
+        "!pip install huggingface_hub\n",
+        "\n",
+        "from huggingface_hub import notebook_login\n",
+        "import torch\n",
+        "import os\n",
+        "\n",
+        "# Log in to Hugging Face\n",
+        "notebook_login() #to login using this function you will need to provide your\n",
+        "                 #access token from huggung face\n"
+      ],
       "metadata": {
-        "id": "B29KMkcsP3ec"
+        "id": "-cUV-brxpmT0"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Save your model\n",
+        "torch.save(model.state_dict(), 'testModel.pth')\n",
+        "\n",
+        "# Set up and push to Hugging Face repository\n",
+        "from huggingface_hub import HfApi, Repository\n",
+        "\n",
+        "model_name = \"testModel\"  # Choose a name for your model repository\n",
+        "username = \"Maravnir\"  # Your Hugging Face username\n",
+        "repo_name = f\"{username}/{model_name}\"\n",
+        "api = HfApi()\n",
+        "\n",
+        "# Create the repository if it doesn't exist\n",
+        "api.create_repo(name=model_name, exist_ok=True, private=False)\n",
+        "\n",
+        "repo_url = f\"https://huggingface.co/{repo_name}\"\n",
+        "repo_local_path = f\"./{model_name}\"\n",
+        "\n",
+        "# Clone the repository to the local path\n",
+        "repo = Repository(local_dir=repo_local_path, clone_from=repo_url)\n",
+        "\n",
+        "# Move the saved model file to the repository\n",
+        "os.rename(\"testModel.pth\", os.path.join(repo_local_path, \"testModel.pth\"))\n",
+        "\n",
+        "# Push the model to the repository\n",
+        "repo.push_to_hub(commit_message=\"Initial commit of the model\")"
+      ],
       "metadata": {
         "id": "cjXHmNHeP3ec"
       },
