--- a/Mushroom_Species_Pytorch_Lightning_CNN.ipynb
+++ b/Mushroom_Species_Pytorch_Lightning_CNN.ipynb
@@ -477,7 +477,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1m_pc-ZnP3eT",
-        "outputId": "43dab4ef-c61c-4cf5-8ba6-60f3d1812f02"
+        "outputId": "19a9bde3-097e-4c8c-e24f-17241d8cafda"
       },
       "cell_type": "code",
       "outputs": [
@@ -486,13 +486,11 @@
           "name": "stdout",
           "text": [
             "Downloading mushroom-species, 10152025719 bytes compressed\n",
-            "[==================================================] 10152025719 bytes downloaded\n",
-            "Downloaded and uncompressed: mushroom-species\n",
-            "Data source import complete.\n"
+            "[=================================                 ] 6720061440 bytes downloaded"
           ]
         }
       ],
-      "execution_count": 1
+      "execution_count": null
     },
     {
       "cell_type": "code",
@@ -507,7 +505,7 @@
         "id": "xZa-1xi8VKRs",
         "outputId": "d0db5175-a10c-4c58-8e05-65ee0bae0a24"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -630,7 +628,7 @@
         "trusted": true,
         "id": "2WMxzBbNP3eY"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -665,7 +663,7 @@
         "trusted": true,
         "id": "Qs7yJ9-tP3eZ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -700,7 +698,7 @@
         "id": "Vb0yj7QzP3eZ",
         "outputId": "612b14bf-f0d3-400f-a226-35ec8cb034af"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,7 +750,7 @@
         "trusted": true,
         "id": "VlaCk4gaP3ea"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -824,21 +822,56 @@
         "trusted": true,
         "id": "LgWxT0VLP3ea"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "import torch\n",
+        "import pytorch_lightning as pl\n",
+        "from pytorch_lightning.callbacks import ModelCheckpoint\n",
+        "from torchvision.utils import make_grid\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.metrics import classification_report\n",
+        "from torchvision import transforms"
+      ],
+      "metadata": {
+        "id": "EYzQDhPQBoL4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the ModelCheckpoint callback\n",
+        "checkpoint_callback = ModelCheckpoint(\n",
+        "    dirpath='checkpoints/',\n",
+        "    filename='{epoch}-{val_loss:.2f}',\n",
+        "    save_top_k=3,\n",
+        "    verbose=True,\n",
+        "    monitor='val_loss',\n",
+        "    mode='min'\n",
+        ")\n",
+        "\n",
         "if __name__ == '__main__':\n",
         "    datamodule = DataModule()\n",
         "    datamodule.setup()\n",
         "    model = ConvolutionalNetwork()\n",
-        "    trainer = pl.Trainer(max_epochs=10)\n",
+        "    trainer = pl.Trainer(\n",
+        "        max_epochs=10,\n",
+        "        callbacks=[checkpoint_callback]\n",
+        "    )\n",
         "    trainer.fit(model, datamodule)\n",
         "    datamodule.setup(stage='test')\n",
         "    test_loader = datamodule.test_dataloader()\n",
-        "    trainer.test(dataloaders=test_loader)"
+        "    trainer.test(dataloaders=test_loader)\n",
+        "\n",
+        "    # Load the best checkpoint\n",
+        "    best_model_path = checkpoint_callback.best_model_path\n",
+        "    model = ConvolutionalNetwork.load_from_checkpoint(best_model_path)"
       ],
       "metadata": {
         "execution": {
